manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloud-sample-ingress
spec:
  ingressClassName: ingress-internal
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        backend:
          service:
            name: cloud-sample
            port:
              number: 8888
        pathType: Prefix
